# Swiss-Real-Estate-Platforms-Scraping-System

./: pyproject.toml
gregor_repo/: headers.py  helpers.py
gregor_repo/services/: get_icasa_object.py
real_estate_repo/: api_check.py
real_estate_repo/ICasa Data/: contacts-used-ids.csv  rs_categories.csv
real_estate_repo/ICasa Data/Objekte Kontakte Data/: Kontakte.csv  Objekte.csv
real_estate_repo/ICasa Data/Search Results/: icasa-buy-search-results.csv
real_estate_repo/services/: get_icasa_object.py  icasa_search.py
